# ims

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ims.sql  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_offline_sale_stock_status.py  a43f9ddeab1a_add_all_business_tables.py  b1c2d3e4f5a6_add_unit_price_to_inbound_line.py  b2c3d4e5f6a7_rename_outbound_presold.py  c2d3e4f5a6b7_add_unit_price_to_inventory_item.py  c3d4e5f6a7b8_add_repair_enum.py  c8f2a1b3d4e5_make_partner_id_required_on_orders.py  d3e4f5a6b7c8_add_unit_price_month_to_snapshot.py  d4e5f6a7b8c9_drop_sys_enum_and_outbound_sold_offline.py  da1389b468cc_add_unit_to_product_sku.py  db50005be6c8_init_sys_user.py  e4f5a6b7c8d9_add_sys_audit_log.py  e5f6a7b8c9d0_reorder_outbound_return_types.py  e7f1a2b3c4d5_add_rnd_sample_trial_enums.py  f8a2b3c4d5e6_add_user_role.py  f9a0b1c2d3e4_add_daily_snapshot_and_summary.py  g1h2i3j4k5l6_add_inventory_sku_daily_ledger.py  h2i3j4k5l6m7_split_sku_daily_ledger_type_columns.py  i3j4k5l6m7n8_add_dept_procurement_outbound_type.py  j4k5l6m7n8o9_add_customer_and_outbound_customer_name.py  k5l6m7n8o9p0_add_customer_weight.py  l6m7n8o9p0q1_add_sys_config.py
backend/app/api/: audit.py  auth.py  customer.py  dashboard.py  inbound.py  inventory.py  outbound.py  partner.py  product.py  router.py  settings.py  snapshot.py  user.py
backend/app/constants/: sku_daily_ledger.py
backend/scripts/: docker-entrypoint.sh  init_admin.py
frontend/: .gitignore  (+7 more)
(+100 files in other folders)
