[project]
name = "juhe-inventory-mangement-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.4",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "openpyxl>=3.1.5",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"